@@ -7,6 +7,8 @@
 	terminal is used to generate pdf files, this bug does not appear in
 	wxt.
 
+	* src/wxterminal/gp_cairo.c: Fix and complete debugging messages.
+
 2007-03-21 Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* src/graphics.c (boundary): The change of 2007-02-25 overlooked the
